--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "react-scripts": "1.1.1"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "history": "^4.6.3",
     "marked": "^0.3.6",
     "prop-types": "^15.5.10",
